[package]
name = "rustoptimizer"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.33"
egui = "0.33"
tokio = { version = "1.50", features = ["rt-multi-thread", "macros", "sync", "process"] }
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
rfd = "0.17"
anyhow = "1.0.102"
futures = "0.3"
walkdir = "2.5"
env_logger = "0.11.9"